--- a/LokeshreqesttoBDO.html
+++ b/LokeshreqesttoBDO.html
@@ -12,7 +12,8 @@
         <div class="container" style="
             background: cadetblue;
             margin: auto;">
-           <iframe src="லோகேஷ்1.pdf width="100%" height="1200px"></iframe>
+           
+           <object data="லோகேஷ்1.pdf" type="application/pdf" width="100%" height="1200px">
         </div>
     </body>
 </html>
