--- a/LokeshreqesttoBDO.html
+++ b/LokeshreqesttoBDO.html
@@ -13,7 +13,7 @@
             background: cadetblue;
             margin: auto;">
            
-           <iframe src="லோகேஷ்_ADP" type="application/pdf" width="100%" height="1200px"></iframe>
+           <iframe src="லோகேஷ்_ADP.pdf" type="application/pdf" width="100%" height="1200px"></iframe>
         </div>
     </body>
 </html>
