--- a/LokeshreqesttoBDO.html
+++ b/LokeshreqesttoBDO.html
@@ -12,7 +12,7 @@
         <div class="container" style="
             background: cadetblue;
             margin: auto;">
-           
+           <object data="லோகேஷ்_ADP.pdf" type="application/pdf" width="100%" height="800px">
            <iframe src="லோகேஷ்_ADP.pdf" type="application/pdf" width="100%" height="1200px"></iframe>
         </div>
     </body>
